public/v/release-4.6/_sources/robots/flexiv/index.rst.txt

=============
Flexiv Robots
=============

Set Up Flexiv Robot
~~~~~~~~~~~~~~~~~~~

#. Complete the hardware setup and boot up the robot by following the `Set Up the Robot <https://www.flexiv.com/software/rdk/manual/set_up_the_robot.html>`__ guide in the Flexiv RDK documentation.

#. Connect the UI tablet (teach pendant) and verify you can enable the robot using Flexiv Elements.

#. `Activate the RDK Server <https://www.flexiv.com/software/rdk/manual/activate_rdk_server.html>`__ on the robot.

#. `Enter Remote mode <https://www.flexiv.com/software/rdk/manual/enter_and_exit_remote_mode.html>`__ by setting the robot to ``Auto (Remote)`` mode on the teach pendant.

#. `Connect the user computer <https://www.flexiv.com/software/rdk/manual/connect_user_computer.html>`__ to the same network as the robot and verify connectivity.

#. Note the robot serial number (e.g., ``Rizon4s-062839``). This is required for all launch commands and should be
   substituted for ``<ROBOT_SN>`` in the instructions below.

.. note::

   The following Flexiv Rizon models have been tested with Isaac ROS Manipulation:

   * **Rizon 4s** with Grav gripper (Flexiv-GN01)

   The following software versions have been tested:

   * **Flexiv Software Package**: v3.11
   * **Flexiv Elements Studio**: v3.11

   Other versions may work but have not been verified.

Build Flexiv Drivers from Source
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. include:: /reference_workflows/isaac_for_manipulation/tutorials/_snippets/isaac_ros_manipulation_flexiv_drivers.rst

Configure Grav Gripper
~~~~~~~~~~~~~~~~~~~~~~

The Flexiv Grav gripper is automatically initialized when launching the Flexiv driver with the ``load_gripper:=true`` argument.

#. Verify the gripper is physically attached to the Flexiv Rizon robot.

#. When launching the Flexiv driver, include the gripper:

   .. code:: bash

      ros2 launch flexiv_bringup rizon.launch.py robot_sn:=<ROBOT_SN> load_gripper:=true

   Replace ``<ROBOT_SN>`` with your robot's serial number.

#. In Flexiv Elements, confirm that the active tool frame is set to the gripper TCP, not the
   flange. Insertion policies and grasp poses are defined relative to the gripper TCP.

Export the Robot-Specific URDF
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

The nominal Flexiv URDF might not contain the calibrated kinematic parameters for the physical
robot. After building the Flexiv drivers, export a robot-specific calibrated kinematics model with
the ``flexiv_hardware`` script:

.. code:: bash

   sudo apt install -y python3-pip && python3 -m pip install --break-system-packages flexivrdk==1.9.2
   cd ${ISAAC_ROS_WS}/src/flexiv_ros2/flexiv_hardware/scripts
   python3 export_calibrated_model.py --robot-sn Rizon4s-063459

Replace ``Rizon4s-063459`` with the serial number of the connected robot. The robot must be powered
on and reachable on the network, and ``ISAAC_ROS_WS`` must be set. The script connects to the robot,
reads the factory-calibrated kinematics, and writes the result to:

.. code:: text

   ${ISAAC_ROS_WS}/isaac_ros_assets/<ROBOT_SN>/<ROBOT_SN>_calibrated_kinematics.urdf

Run this once per robot, and re-run only after Flexiv performs a recalibration. When retraining is
required, convert this calibrated URDF to the corresponding USD robot asset and train the insertion
policy with that asset in Isaac Lab.

Troubleshooting
~~~~~~~~~~~~~~~

**The Flexiv driver fails to connect to the robot**

#. Verify that the robot is in ``Auto (Remote)`` mode on the teach pendant.
#. Ensure the workstation and robot are on the same subnet and the robot can be pinged from the workstation.
#. Verify the robot serial number is correct and does not contain spaces (e.g., ``Rizon4s-062839``).

**The gripper does not respond**

#. Ensure the gripper is physically connected and the gripper is lighting up.
#. Check that the gripper model name matches your hardware. The default is ``Flexiv-GN01`` (Grav gripper).

**Joint controller errors during gear insertion**

#. Ensure you are using ``rdk_control_mode:=joint_impedance`` when running the gear insertion workflow.
   The impedance mode provides the compliant behavior required for contact-rich tasks.
#. If you see overshooting or unstable behavior, verify that the ``action_scale_joint_space`` in
   ``isaac_ros_assets/isaac_ros_manipulation_dnn_policy/flexiv/params/env.yaml`` is set to ``0.00625`` for all joints.
